# src/routes/index.ts
@@ -4,6 +4,7 @@ import memberRoutes from "./member.routes";
 import partnerRoutes from "./partner.routes";
 import eventRoutes from "./event.routes";
 import projectRoutes from "./project.routes";
+import ReviewRoutes from "./review.routes";
 
 const router = Router();
 
@@ -12,5 +13,6 @@ router.use("/members", memberRoutes);
 router.use("/partners", partnerRoutes);
 router.use("/events", eventRoutes);
 router.use("/projects", projectRoutes);
+router.use("/reviews", ReviewRoutes);
 
 export default router;
